--- a/todo_app/index.html
+++ b/todo_app/index.html
@@ -9,9 +9,12 @@
 <body>
     <div class="container">
         <h1>Todo List</h1>
-        <input type="text" id="todo-input" placeholder="Add a new todo...">
-        <button id="add-button">Add Todo</button>
-        <ul id="todo-list"></ul>
+        <div class="input-section">
+            <input type="text" id="todo-input" placeholder="Add a new todo...">
+            <button id="add-button">Add</button>
+        </div>
+        <ul id="todo-list">
+        </ul>
     </div>
     <script src="script.js"></script>
 </body>
